Small Tweaks and QoL improvements - Update `/colours` - Update `/editsign` to use  minimessage - Update `/list` to show people in party work in the overworld - Update `/renameitem` to use minimessage - Update `/sharehome` to work from Discord 	- Remove cooldown so that it works correctly - Add new emote to `CommandShrug`: `:tm:` which maps to `™` 	- Add field to CommandShrug$TextEmote to determine if it can be used in a command - Remove `/top playtime no-staff` - Update `/vanish` help messages - Fix playtime for staff - AFK staff kick - Add new helper method to `ComponentUtils` -- `parse`, used for parsing the minimessage/legacy expressions